Name:                hscript
Version:             0.1
Synopsis:            My Haskell shell scripts

License:             BSD3
License-file:        LICENSE
Author:              Nils Schweinsberg
Maintainer:          mail@n-sch.de
Category:            System

Build-type:          Simple
Cabal-version:       >= 1.8

Library

    GHC-Options: -Wall
    HS-Source-Dirs: src

    Build-depends:
        base == 4.*,
        mtl == 1.*,
        process == 1.*

    Exposed-Modules:
        System.Shell

Executable newproject

    GHC-Options: -Wall -O2
    HS-Source-Dirs: ex-src/newProject
    Main-is: Main.hs

    Build-depends:
        base == 4.*,
        directory == 1.*,
        process == 1.*

Executable wwwsync

    GHC-Options: -Wall -O2
    HS-Source-Dirs: ex-src/wwwSync
    Main-is: Main.hs

    Build-depends:
        base == 4.*,
        process == 1.*,
        hscript == 0.1.*
